Added actor factory support for state machine workflows, first pass anyway

--- a/src/Stact.Specs/Stact.Specs.csproj
+++ b/src/Stact.Specs/Stact.Specs.csproj
@@ -171,6 +171,8 @@
     <Compile Include="Usage\PausibleAgent_Specs.cs" />
     <Compile Include="Workflow\Action_Specs.cs" />
     <Compile Include="Workflow\Creating_Specs.cs" />
+    <Compile Include="Workflow\EventVisitor_Specs.cs" />
+    <Compile Include="Workflow\StateMachineActor_Specs.cs" />
     <Compile Include="Workflow\Transition_Specs.cs" />
   </ItemGroup>
   <ItemGroup>
