--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -364,10 +364,25 @@
     <Compile Include="StateMachine\ChannelConfiguration\StateMachineEventInspector.cs" />
     <Compile Include="StateMachine\ChannelConfiguration\StateMachineEventInspectorResult.cs" />
     <Compile Include="StateMachine\StateMachineBinding.cs" />
+    <Compile Include="Workflow\Configuration\DelegateConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\ExceptionBuilder.cs" />
+    <Compile Include="Workflow\Configuration\ExceptionBuilderConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\ExceptionConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\ExceptionConfiguratorImpl.cs" />
     <Compile Include="Workflow\Configuration\MethodBodyConfigurator.cs" />
     <Compile Include="Workflow\Configuration\DelegateInstanceBodyConfigurator.cs" />
     <Compile Include="Workflow\Configuration\DelegateInstanceConfigurator.cs" />
     <Compile Include="Workflow\Configuration\MethodConfigurator.cs" />
+    <Compile Include="Workflow\Configuration\SimpleExceptionBuilder.cs" />
+    <Compile Include="Workflow\ExceptionEvent.cs" />
+    <Compile Include="Workflow\Internal\ActivityEventExceptionHandler.cs" />
+    <Compile Include="Workflow\Internal\ActivityExceptionHandler.cs" />
+    <Compile Include="Workflow\Internal\EventExceptionHandler.cs" />
+    <Compile Include="Workflow\Internal\ExceptionHandlerResult.cs" />
+    <Compile Include="Workflow\Internal\MessageEventExceptionHandler.cs" />
+    <Compile Include="Workflow\Internal\SimpleActivityExecutor.cs" />
+    <Compile Include="Workflow\Internal\SimpleEventExceptionHandler.cs" />
+    <Compile Include="Workflow\Internal\WorkflowModel.cs" />
     <Compile Include="Workflow\Internal\ActivityBase.cs" />
     <Compile Include="Workflow\Internal\DelegateActivity.cs" />
     <Compile Include="Workflow\Internal\DelegateInstanceBodyActivity.cs" />
@@ -404,9 +419,13 @@
     <Compile Include="Workflow\Internal\MessageEvent.cs" />
     <Compile Include="Workflow\Event.cs" />
     <Compile Include="Workflow\Internal\SimpleEvent.cs" />
+    <Compile Include="Workflow\Internal\WorkflowModelImpl.cs" />
+    <Compile Include="Workflow\RespondExtensions.cs" />
     <Compile Include="Workflow\State.cs" />
     <Compile Include="Workflow\Internal\Activity.cs" />
     <Compile Include="Workflow\Internal\StateMachineVisitor.cs" />
+    <Compile Include="Workflow\ExceptionExtensions.cs" />
+    <Compile Include="Workflow\ThenExtensions.cs" />
     <Compile Include="Workflow\StateMachineWorkflow.cs" />
     <Compile Include="Workflow\StateMachineConfiguratorExtensions.cs" />
     <Compile Include="Workflow\EventChannel.cs" />
@@ -415,9 +434,11 @@
     <Compile Include="Workflow\TraceStateMachineVisitor.cs" />
     <Compile Include="Workflow\Internal\WorkflowInstance.cs" />
     <Compile Include="Workflow\Internal\StateMachineState.cs" />
+    <Compile Include="Workflow\TransitionToExtensions.cs" />
     <Compile Include="Workflow\UnknownEventException.cs" />
     <Compile Include="Workflow\UnknownStateException.cs" />
     <Compile Include="Workflow\WorkflowDefinition.cs" />
+    <Compile Include="Workflow\WorkflowDefinitionSource.cs" />
     <Compile Include="Workflow\WorkflowInstance.cs" />
     <Compile Include="Workflow\WorkflowInstanceExtensions.cs" />
   </ItemGroup>
