Fixed some routing issues with header type mappings

--- a/src/Stact.Specs/Stact.Specs.csproj
+++ b/src/Stact.Specs/Stact.Specs.csproj
@@ -154,6 +154,21 @@
     <Compile Include="Channels\ThreadPoolChannel_Specs.cs" />
     <Compile Include="Channels\UntypedChannelSubscription_Specs.cs" />
     <Compile Include="Channels\WcfSubscription_Specs.cs" />
+    <Compile Include="Diagnostics\ShuntTraceChannel.cs" />
+    <Compile Include="Diagnostics\TraceActor.cs" />
+    <Compile Include="Diagnostics\TraceChannelExtensions.cs" />
+    <Compile Include="Diagnostics\TraceChannelImpl.cs" />
+    <Compile Include="Diagnostics\TraceOperationComplete.cs" />
+    <Compile Include="Diagnostics\TraceOperationCompleteImpl.cs" />
+    <Compile Include="Diagnostics\TraceOperationStarted.cs" />
+    <Compile Include="Diagnostics\Diag_Specs.cs" />
+    <Compile Include="Diagnostics\TraceChannel.cs" />
+    <Compile Include="Diagnostics\TraceMessageLevel.cs" />
+    <Compile Include="Diagnostics\TraceOperation.cs" />
+    <Compile Include="Diagnostics\TraceOperationImpl.cs" />
+    <Compile Include="Diagnostics\TraceOperationMessage.cs" />
+    <Compile Include="Diagnostics\TraceOperationMessageImpl.cs" />
+    <Compile Include="Diagnostics\TraceOperationStartedImpl.cs" />
     <Compile Include="Headers\HeaderAdapter_Specs.cs" />
     <Compile Include="Headers\MessageHeader_Specs.cs" />
     <Compile Include="Model\Ask.cs" />
@@ -162,6 +177,7 @@
     <Compile Include="Model\Status.cs" />
     <Compile Include="Registries\ActorRegistry_Specs.cs" />
     <Compile Include="Routing\Condition_Specs.cs" />
+    <Compile Include="Routing\HeaderAdapterRouting_Specs.cs" />
     <Compile Include="Routing\Memory_Specs.cs" />
     <Compile Include="Routing\NewRouting_Specs.cs" />
     <Compile Include="Routing\Routing_Specs.cs" />
