--- a/src/Stact.Specs/Stact.Specs.csproj
+++ b/src/Stact.Specs/Stact.Specs.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Channels\ThreadPoolChannel_Specs.cs" />
     <Compile Include="Channels\UntypedChannelSubscription_Specs.cs" />
     <Compile Include="Channels\WcfSubscription_Specs.cs" />
+    <Compile Include="Data\OrderedSequence_Specs.cs" />
     <Compile Include="Diagnostics\ShuntTraceChannel.cs" />
     <Compile Include="Diagnostics\TraceActor.cs" />
     <Compile Include="Diagnostics\TraceChannelExtensions.cs" />
@@ -169,6 +170,10 @@
     <Compile Include="Diagnostics\TraceOperationMessage.cs" />
     <Compile Include="Diagnostics\TraceOperationMessageImpl.cs" />
     <Compile Include="Diagnostics\TraceOperationStartedImpl.cs" />
+    <Compile Include="Functional\Action_Specs.cs" />
+    <Compile Include="Functional\Binder.cs" />
+    <Compile Include="Functional\Identity_Specs.cs" />
+    <Compile Include="Functional\Maybe_Specs.cs" />
     <Compile Include="Headers\HeaderAdapter_Specs.cs" />
     <Compile Include="Headers\MessageHeader_Specs.cs" />
     <Compile Include="Model\Ask.cs" />
