More bits, more bits

--- a/src/Stact.Playground/Stact.Playground.csproj
+++ b/src/Stact.Playground/Stact.Playground.csproj
@@ -45,19 +45,27 @@
     </Compile>
     <Compile Include="Data\Internal\CompElement.cs" />
     <Compile Include="Data\Internal\Element.cs" />
-    <Compile Include="Data\Internal\FingerTree.cs" />
-    <Compile Include="Data\Internal\FingerTreeM.cs" />
+    <Compile Include="Data\Internal\EmptyFTree.cs" />
+    <Compile Include="Data\Internal\EmptyFTreeM.cs" />
+    <Compile Include="Data\Internal\DeepFTree.cs" />
+    <Compile Include="Data\Internal\DeepFTreeM.cs" />
     <Compile Include="Data\Internal\FingerTreeSplits.cs" />
     <Compile Include="Data\Internal\FNSeq.cs" />
+    <Compile Include="Data\Internal\FTree.cs" />
+    <Compile Include="Data\Internal\FTreeM.cs" />
     <Compile Include="Data\Internal\Key.cs" />
     <Compile Include="Data\Internal\KeyMonoid.cs" />
     <Compile Include="Data\Internal\Measurable.cs" />
     <Compile Include="Data\Internal\OrderedElement.cs" />
     <Compile Include="Data\Internal\Seq.cs" />
+    <Compile Include="Data\Internal\SingleFTree.cs" />
+    <Compile Include="Data\Internal\SingleFTreeM.cs" />
     <Compile Include="Data\Internal\Splittable.cs" />
     <Compile Include="Data\Internal\Monoid.cs" />
     <Compile Include="Data\Internal\OrderedSequence.cs" />
     <Compile Include="Data\Internal\Prio.cs" />
+    <Compile Include="Data\Internal\ViewL.cs" />
+    <Compile Include="Data\Internal\ViewR.cs" />
     <Compile Include="Data\Ordered_Tests.cs" />
     <Compile Include="Data\Internal\PriorityQueue.cs" />
     <Compile Include="Data\Internal\RandAccessSequence.cs" />
