--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -161,8 +161,10 @@
     <Compile Include="Channels\Configuration\ExtensionsForFiberConfiguration.cs" />
     <Compile Include="Channels\Configuration\Internal\SchedulerFactoryConfigurator.cs" />
     <Compile Include="Continuation.cs" />
+    <Compile Include="Data\Deque.cs" />
     <Compile Include="Data\Internal\Deep.cs" />
     <Compile Include="Data\Internal\Digit.cs" />
+    <Compile Include="Data\Internal\Element.cs" />
     <Compile Include="Data\Internal\Empty.cs" />
     <Compile Include="Data\Internal\ExtensionsForFingerTree.cs" />
     <Compile Include="Data\Internal\FingerTree.cs" />
