--- a/src/Stact.ServerFramework.Specs/Stact.ServerFramework.Specs.csproj
+++ b/src/Stact.ServerFramework.Specs/Stact.ServerFramework.Specs.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HttpServer_Specs.cs" />
+    <Compile Include="MessageStream_Specs.cs" />
+    <Compile Include="Pgm_Specs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SocketServer_Specs.cs" />
   </ItemGroup>
