--- a/src/Stact.ServerFramework/Stact.ServerFramework.csproj
+++ b/src/Stact.ServerFramework/Stact.ServerFramework.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -82,6 +83,22 @@
     <Compile Include="Internal\HttpResponseContext.cs" />
     <Compile Include="Internal\JsonEnumConverter.cs" />
     <Compile Include="PatternMatchConnectionHandler.cs" />
+    <Compile Include="Pgm\Internal\BlockReader.cs" />
+    <Compile Include="Pgm\Internal\BlockWriterMetricsImpl.cs" />
+    <Compile Include="Pgm\Internal\BufferedBlockWriter.cs" />
+    <Compile Include="Pgm\Internal\BlockWriter.cs" />
+    <Compile Include="Pgm\Internal\BlockWriterMetrics.cs" />
+    <Compile Include="Pgm\Internal\ByteBuffer.cs" />
+    <Compile Include="Pgm\Internal\ChannelBlockReader.cs" />
+    <Compile Include="Pgm\Internal\MessageChannel.cs" />
+    <Compile Include="Pgm\Internal\NonClosingStream.cs" />
+    <Compile Include="Pgm\Internal\PgmListener.cs" />
+    <Compile Include="Pgm\Internal\PgmWriter.cs" />
+    <Compile Include="Pgm\Internal\PgmSocket.cs" />
+    <Compile Include="Pgm\Internal\PgmSocketOptions.cs" />
+    <Compile Include="Pgm\Internal\BlockWriterChannel.cs" />
+    <Compile Include="Pgm\Internal\SocketWriter.cs" />
+    <Compile Include="Pgm\Internal\WireMessageHeader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestContext.cs" />
     <Compile Include="ResponseContext.cs" />
@@ -99,6 +116,7 @@
       <Name>Stact</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
