--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -107,17 +107,31 @@
     <Compile Include="Actors\ActorConvention.cs" />
     <Compile Include="Actors\ActorInstance.cs" />
     <Compile Include="Actors\ActorFactory.cs" />
+    <Compile Include="Actors\Events\ActorRegistered.cs" />
+    <Compile Include="Actors\Events\ActorRegistryEvent.cs" />
+    <Compile Include="Actors\Events\Impl\ActorRegisteredImpl.cs" />
+    <Compile Include="Actors\Events\Impl\ActorUnregisteredImpl.cs" />
+    <Compile Include="Actors\Actors\Registries\InMemoryActorRegistry.cs" />
+    <Compile Include="Actors\Events\ActorUnregistered.cs" />
     <Compile Include="Actors\CacheActorRegistry.cs" />
     <Compile Include="Actors\Configuration\ActorFactoryConfigurator.cs" />
+    <Compile Include="Actors\Configuration\ActorRegistryConfigurator.cs" />
+    <Compile Include="Actors\Configuration\RegistryConfigurators\ActorRegistryConfiguratorImpl.cs" />
     <Compile Include="Actors\Configuration\Internal\ActorConventionSet.cs" />
     <Compile Include="Actors\Configuration\Internal\ActorFactoryConfiguratorImpl.cs" />
     <Compile Include="Actors\ActorProvider.cs" />
     <Compile Include="Actors\ActorRegistry.cs" />
     <Compile Include="Actors\ActorRepository.cs" />
+    <Compile Include="Actors\Configuration\RegistryConfigurators\InMemoryRegistryBuilder.cs" />
     <Compile Include="Actors\Configuration\Internal\PublicMethodConvention.cs" />
     <Compile Include="Actors\Configuration\Internal\PropertyChannelConvention.cs" />
     <Compile Include="Actors\Configuration\Internal\PublicMethodsConvention.cs" />
     <Compile Include="Actors\Configuration\Internal\PropertyChannelsConvention.cs" />
+    <Compile Include="Actors\Configuration\RegistryConfigurators\RegistryBuilder.cs" />
+    <Compile Include="Actors\Configuration\RegistryConfigurators\RegistryBuilderConfigurator.cs" />
+    <Compile Include="Actors\Configuration\RemoteActorRegistryConfigurator.cs" />
+    <Compile Include="Actors\Configuration\RegistryConfigurators\RemoteActorRegistryConfiguratorImpl.cs" />
+    <Compile Include="Actors\Configuration\RemoteActorRegistryExtensions.cs" />
     <Compile Include="Actors\ExtensionsForActorConventions.cs" />
     <Compile Include="Actors\ExtensionsToActorInstance.cs" />
     <Compile Include="Actors\AnonymousActor.cs" />
@@ -171,7 +185,27 @@
     <Compile Include="Fibers\Internal\OperationList.cs" />
     <Compile Include="Fibers\Internal\ShutdownFiberOnDispose.cs" />
     <Compile Include="Fibers\Internal\StopFiberOnDispose.cs" />
+    <Compile Include="Headers\MessageHeader.cs" />
+    <Compile Include="Headers\HeaderKey.cs" />
+    <Compile Include="Headers\Internal\HeadersImpl.cs" />
+    <Compile Include="Headers\Headers.cs" />
+    <Compile Include="Headers\RequestHeader.cs" />
     <Compile Include="MessageUrn.cs" />
+    <Compile Include="Remote\Remote\BufferedChunkWriter.cs" />
+    <Compile Include="Remote\Remote\Chunk.cs" />
+    <Compile Include="Remote\Remote\ChunkChannel.cs" />
+    <Compile Include="Remote\Remote\ChunkMetrics.cs" />
+    <Compile Include="Remote\Remote\ChunkMetricsImpl.cs" />
+    <Compile Include="Remote\Remote\ChunkWriter.cs" />
+    <Compile Include="Remote\Remote\ChunkWriterChannel.cs" />
+    <Compile Include="Actors\ActorRegistryFactory.cs" />
+    <Compile Include="Remote\Remote\MessageChannel.cs" />
+    <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastListener.cs" />
+    <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastSocket.cs" />
+    <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastSocketOptions.cs" />
+    <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastWriter.cs" />
+    <Compile Include="Remote\Remote\SocketExtensions.cs" />
+    <Compile Include="Remote\Remote\SocketWriter.cs" />
     <Compile Include="Routing\RoutingContextProxy.cs" />
     <Compile Include="Schedulers\Internal\ShutdownSchedulerOnDispose.cs" />
     <Compile Include="Schedulers\SchedulerException.cs" />
