--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Channels\Internal\ChannelConnectionBase.cs" />
     <Compile Include="Channels\Internal\CreateChannelConnection.cs" />
     <Compile Include="Channels\Internal\DisconnectChannelVisitor.cs" />
+    <Compile Include="Channels\Internal\HeaderChannelAdapterFactory.cs" />
     <Compile Include="Channels\Internal\TypedChannelConnection.cs" />
     <Compile Include="Channels\Configuration\Internal\UntypedChannelBuilder.cs" />
     <Compile Include="Channels\Configuration\Builders\FilterChannelBuilder.cs" />
@@ -185,27 +186,36 @@
     <Compile Include="Fibers\Internal\OperationList.cs" />
     <Compile Include="Fibers\Internal\ShutdownFiberOnDispose.cs" />
     <Compile Include="Fibers\Internal\StopFiberOnDispose.cs" />
+    <Compile Include="Headers\Internal\HeaderChannel.cs" />
     <Compile Include="Headers\MessageHeader.cs" />
     <Compile Include="Headers\HeaderKey.cs" />
     <Compile Include="Headers\Internal\HeadersImpl.cs" />
     <Compile Include="Headers\Headers.cs" />
     <Compile Include="Headers\RequestHeader.cs" />
     <Compile Include="MessageUrn.cs" />
+    <Compile Include="Remote\Remote\ArraySegmentExtensions.cs" />
     <Compile Include="Remote\Remote\BufferedChunkWriter.cs" />
     <Compile Include="Remote\Remote\Chunk.cs" />
     <Compile Include="Remote\Remote\ChunkChannel.cs" />
+    <Compile Include="Remote\Remote\ChunkHeaderChannel.cs" />
     <Compile Include="Remote\Remote\ChunkMetrics.cs" />
     <Compile Include="Remote\Remote\ChunkMetricsImpl.cs" />
     <Compile Include="Remote\Remote\ChunkWriter.cs" />
     <Compile Include="Remote\Remote\ChunkWriterChannel.cs" />
     <Compile Include="Actors\ActorRegistryFactory.cs" />
+    <Compile Include="Headers\Internal\HeaderChannelAdapterFactoryImpl.cs" />
+    <Compile Include="Headers\Internal\HeaderChannelAdapter.cs" />
     <Compile Include="Remote\Remote\MessageChannel.cs" />
+    <Compile Include="Headers\Internal\MessageRouterFactory.cs" />
     <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastListener.cs" />
     <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastSocket.cs" />
     <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastSocketOptions.cs" />
     <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastWriter.cs" />
+    <Compile Include="Headers\Internal\RequestRouterFactory.cs" />
+    <Compile Include="Headers\Internal\ResponseRouterFactory.cs" />
     <Compile Include="Remote\Remote\SocketExtensions.cs" />
     <Compile Include="Remote\Remote\SocketWriter.cs" />
+    <Compile Include="Remote\Remote\DelegateChunkWriter.cs" />
     <Compile Include="Routing\RoutingContextProxy.cs" />
     <Compile Include="Schedulers\Internal\ShutdownSchedulerOnDispose.cs" />
     <Compile Include="Schedulers\SchedulerException.cs" />
