Remote actor story starting to develop nicely

--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Actors\ActorConvention.cs" />
     <Compile Include="Actors\ActorInstance.cs" />
     <Compile Include="Actors\ActorFactory.cs" />
+    <Compile Include="Remote\Configuration\RemoteActorRegistryBuilder.cs" />
     <Compile Include="Actors\Events\ActorRegistered.cs" />
     <Compile Include="Actors\Events\ActorRegistryEvent.cs" />
     <Compile Include="Actors\Events\Impl\ActorRegisteredImpl.cs" />
@@ -129,9 +130,9 @@
     <Compile Include="Actors\Configuration\Internal\PropertyChannelsConvention.cs" />
     <Compile Include="Actors\Configuration\RegistryConfigurators\RegistryBuilder.cs" />
     <Compile Include="Actors\Configuration\RegistryConfigurators\RegistryBuilderConfigurator.cs" />
-    <Compile Include="Actors\Configuration\RemoteActorRegistryConfigurator.cs" />
-    <Compile Include="Actors\Configuration\RegistryConfigurators\RemoteActorRegistryConfiguratorImpl.cs" />
-    <Compile Include="Actors\Configuration\RemoteActorRegistryExtensions.cs" />
+    <Compile Include="Remote\Configuration\RemoteActorRegistryConfigurator.cs" />
+    <Compile Include="Remote\Configuration\RemoteActorRegistryConfiguratorImpl.cs" />
+    <Compile Include="Remote\RemoteActorRegistryExtensions.cs" />
     <Compile Include="Actors\ExtensionsForActorConventions.cs" />
     <Compile Include="Actors\ExtensionsToActorInstance.cs" />
     <Compile Include="Actors\AnonymousActor.cs" />
@@ -192,6 +193,7 @@
     <Compile Include="Headers\Internal\HeadersImpl.cs" />
     <Compile Include="Headers\Headers.cs" />
     <Compile Include="Headers\RequestHeader.cs" />
+    <Compile Include="Headers\ResponseHeader.cs" />
     <Compile Include="MessageUrn.cs" />
     <Compile Include="Remote\Remote\ArraySegmentExtensions.cs" />
     <Compile Include="Remote\Remote\BufferedChunkWriter.cs" />
@@ -203,16 +205,18 @@
     <Compile Include="Remote\Remote\ChunkWriter.cs" />
     <Compile Include="Remote\Remote\ChunkWriterChannel.cs" />
     <Compile Include="Actors\ActorRegistryFactory.cs" />
-    <Compile Include="Headers\Internal\HeaderChannelAdapterFactoryImpl.cs" />
+    <Compile Include="Headers\Internal\HeaderAdapterFactoryImpl.cs" />
     <Compile Include="Headers\Internal\HeaderChannelAdapter.cs" />
     <Compile Include="Remote\Remote\MessageChannel.cs" />
-    <Compile Include="Headers\Internal\MessageRouterFactory.cs" />
+    <Compile Include="Headers\Internal\MessageAdapterFactory.cs" />
+    <Compile Include="Remote\Remote\ReliableMulticastRemoteActorRegistry.cs" />
     <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastListener.cs" />
     <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastSocket.cs" />
     <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastSocketOptions.cs" />
     <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastWriter.cs" />
-    <Compile Include="Headers\Internal\RequestRouterFactory.cs" />
-    <Compile Include="Headers\Internal\ResponseRouterFactory.cs" />
+    <Compile Include="Headers\Internal\RequestAdapterFactory.cs" />
+    <Compile Include="Headers\Internal\ResponseAdapterFactory.cs" />
+    <Compile Include="Remote\Remote\RemoteActorRegistry.cs" />
     <Compile Include="Remote\Remote\SocketExtensions.cs" />
     <Compile Include="Remote\Remote\SocketWriter.cs" />
     <Compile Include="Remote\Remote\DelegateChunkWriter.cs" />
@@ -222,8 +226,8 @@
     <Compile Include="StactException.cs" />
     <Compile Include="Headers\Command.cs" />
     <Compile Include="Internal\ThreadSingleton.cs" />
-    <Compile Include="Messages\Internal\ExitImpl.cs" />
-    <Compile Include="Messages\Internal\KillImpl.cs" />
+    <Compile Include="Messages\Messages\ExitImpl.cs" />
+    <Compile Include="Messages\Messages\KillImpl.cs" />
     <Compile Include="Actors\Internal\PendingReceiveImpl.cs" />
     <Compile Include="Actors\WithinSentRequest.cs" />
     <Compile Include="Actors\Internal\WithinSentRequestImpl.cs" />
