--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -107,6 +107,8 @@
     <Compile Include="Actors\ActorConvention.cs" />
     <Compile Include="Actors\ActorInstance.cs" />
     <Compile Include="Actors\ActorFactory.cs" />
+    <Compile Include="MessageHeaders\MessageHeaders\MatchHeader.cs" />
+    <Compile Include="MessageHeaders\MessageHeaders\MatchHeaderChannel.cs" />
     <Compile Include="Remote\Configuration\RemoteActorRegistryBuilder.cs" />
     <Compile Include="Actors\Events\ActorRegistered.cs" />
     <Compile Include="Actors\Events\ActorRegistryEvent.cs" />
@@ -162,7 +164,7 @@
     <Compile Include="Channels\Internal\ChannelConnectionBase.cs" />
     <Compile Include="Channels\Internal\CreateChannelConnection.cs" />
     <Compile Include="Channels\Internal\DisconnectChannelVisitor.cs" />
-    <Compile Include="Channels\Internal\HeaderChannelAdapterFactory.cs" />
+    <Compile Include="MessageHeaders\MessageHeaders\MatchHeaderSelectorFactory.cs" />
     <Compile Include="Channels\Internal\TypedChannelConnection.cs" />
     <Compile Include="Channels\Configuration\Internal\UntypedChannelBuilder.cs" />
     <Compile Include="Channels\Configuration\Builders\FilterChannelBuilder.cs" />
@@ -187,13 +189,13 @@
     <Compile Include="Fibers\Internal\OperationList.cs" />
     <Compile Include="Fibers\Internal\ShutdownFiberOnDispose.cs" />
     <Compile Include="Fibers\Internal\StopFiberOnDispose.cs" />
-    <Compile Include="Headers\Internal\HeaderChannel.cs" />
-    <Compile Include="Headers\MessageHeader.cs" />
-    <Compile Include="Headers\HeaderKey.cs" />
-    <Compile Include="Headers\Internal\HeadersImpl.cs" />
-    <Compile Include="Headers\Headers.cs" />
-    <Compile Include="Headers\RequestHeader.cs" />
-    <Compile Include="Headers\ResponseHeader.cs" />
+    <Compile Include="MessageHeaders\MessageHeaders\MatchHeaderCallback.cs" />
+    <Compile Include="MessageHeaders\MessageHeader.cs" />
+    <Compile Include="MessageHeaders\HeaderKey.cs" />
+    <Compile Include="MessageHeaders\MessageHeaders\HeadersImpl.cs" />
+    <Compile Include="MessageHeaders\Headers.cs" />
+    <Compile Include="MessageHeaders\RequestHeader.cs" />
+    <Compile Include="MessageHeaders\ResponseHeader.cs" />
     <Compile Include="MessageUrn.cs" />
     <Compile Include="Remote\Remote\ArraySegmentExtensions.cs" />
     <Compile Include="Remote\Remote\BufferedChunkWriter.cs" />
@@ -205,17 +207,18 @@
     <Compile Include="Remote\Remote\ChunkWriter.cs" />
     <Compile Include="Remote\Remote\ChunkWriterChannel.cs" />
     <Compile Include="Actors\ActorRegistryFactory.cs" />
-    <Compile Include="Headers\Internal\HeaderAdapterFactoryImpl.cs" />
-    <Compile Include="Headers\Internal\HeaderChannelAdapter.cs" />
-    <Compile Include="Remote\Remote\MessageChannel.cs" />
-    <Compile Include="Headers\Internal\MessageAdapterFactory.cs" />
+    <Compile Include="MessageHeaders\MessageHeaders\MatchHeaderSelectorFactoryImpl.cs" />
+    <Compile Include="MessageHeaders\MessageHeaders\MatchHeaderImpl.cs" />
+    <Compile Include="Remote\Remote\HeaderChannel.cs" />
+    <Compile Include="MessageHeaders\MessageHeaders\MessageSelectorFactory.cs" />
+    <Compile Include="Remote\Remote\MessageMethod.cs" />
     <Compile Include="Remote\Remote\ReliableMulticastRemoteActorRegistry.cs" />
     <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastListener.cs" />
     <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastSocket.cs" />
     <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastSocketOptions.cs" />
     <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastWriter.cs" />
-    <Compile Include="Headers\Internal\RequestAdapterFactory.cs" />
-    <Compile Include="Headers\Internal\ResponseAdapterFactory.cs" />
+    <Compile Include="MessageHeaders\MessageHeaders\RequestSelectorFactory.cs" />
+    <Compile Include="MessageHeaders\MessageHeaders\ResponseSelectorFactory.cs" />
     <Compile Include="Remote\Remote\RemoteActorRegistry.cs" />
     <Compile Include="Remote\Remote\SocketExtensions.cs" />
     <Compile Include="Remote\Remote\SocketWriter.cs" />
@@ -224,7 +227,7 @@
     <Compile Include="Schedulers\Internal\ShutdownSchedulerOnDispose.cs" />
     <Compile Include="Schedulers\SchedulerException.cs" />
     <Compile Include="StactException.cs" />
-    <Compile Include="Headers\Command.cs" />
+    <Compile Include="MessageHeaders\Command.cs" />
     <Compile Include="Internal\ThreadSingleton.cs" />
     <Compile Include="Messages\Messages\ExitImpl.cs" />
     <Compile Include="Messages\Messages\KillImpl.cs" />
@@ -248,13 +251,13 @@
     <Compile Include="Channels\Configuration\Internal\PropertyChannelsConfigurator.cs" />
     <Compile Include="Channels\Configuration\Internal\PropertyChannelsConfiguratorImpl.cs" />
     <Compile Include="ExtensionsToInbox.cs" />
-    <Compile Include="Headers\ExtensionsToHeaders.cs" />
-    <Compile Include="Headers\Message.cs" />
-    <Compile Include="Headers\Internal\MessageImpl.cs" />
-    <Compile Include="Headers\Request.cs" />
-    <Compile Include="Headers\Internal\RequestImpl.cs" />
-    <Compile Include="Headers\Response.cs" />
-    <Compile Include="Headers\Internal\ResponseImpl.cs" />
+    <Compile Include="MessageHeaders\ExtensionsToHeaders.cs" />
+    <Compile Include="MessageHeaders\Message.cs" />
+    <Compile Include="MessageHeaders\MessageHeaders\MessageImpl.cs" />
+    <Compile Include="MessageHeaders\Request.cs" />
+    <Compile Include="MessageHeaders\MessageHeaders\RequestImpl.cs" />
+    <Compile Include="MessageHeaders\Response.cs" />
+    <Compile Include="MessageHeaders\MessageHeaders\ResponseImpl.cs" />
     <Compile Include="Actors\SentRequest.cs" />
     <Compile Include="Actors\Internal\SentRequestImpl.cs" />
     <Compile Include="Channels\TypedChannelAdapter.cs" />
