Still tweaking the remote actor story

--- a/src/Stact/Stact.csproj
+++ b/src/Stact/Stact.csproj
@@ -109,8 +109,10 @@
     <Compile Include="Actors\ActorFactory.cs" />
     <Compile Include="Actors\Actors\Registries\ActorRegistryHeaderChannel.cs" />
     <Compile Include="ActorUrn.cs" />
+    <Compile Include="MessageHeaders\MessageHeaders\AdvancedExtensionsForHeaders.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\MatchHeader.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\MatchHeaderChannel.cs" />
+    <Compile Include="MessageHeaders\SetMessageHeader.cs" />
     <Compile Include="Messages\Resume.cs" />
     <Compile Include="Messages\Suspend.cs" />
     <Compile Include="Remote\Configuration\RemoteActorRegistryBuilder.cs" />
@@ -204,30 +206,32 @@
     <Compile Include="Remote\Remote\ArraySegmentExtensions.cs" />
     <Compile Include="Remote\Remote\BufferedChunkWriter.cs" />
     <Compile Include="Remote\Remote\Chunk.cs" />
-    <Compile Include="Remote\Remote\ChunkChannel.cs" />
+    <Compile Include="Remote\Remote\DeserializeChunkChannel.cs" />
+    <Compile Include="Remote\Remote\ChunkWriterControl.cs" />
+    <Compile Include="Remote\Remote\Loopback\LoopbackReaderWriter.cs" />
     <Compile Include="Remote\Remote\MatchHeaderChannel.cs" />
-    <Compile Include="Remote\Remote\ChunkMetrics.cs" />
-    <Compile Include="Remote\Remote\ChunkMetricsImpl.cs" />
     <Compile Include="Remote\Remote\ChunkWriter.cs" />
-    <Compile Include="Remote\Remote\ChunkWriterChannel.cs" />
+    <Compile Include="Remote\Remote\Node.cs" />
+    <Compile Include="Remote\Remote\RemoteRegistryNode.cs" />
+    <Compile Include="Remote\Remote\RemoteNode.cs" />
+    <Compile Include="Remote\Remote\SerializeChunkChannel.cs" />
     <Compile Include="Actors\ActorRegistryFactory.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\MatchHeaderSelectorFactoryImpl.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\MatchHeaderImpl.cs" />
     <Compile Include="Remote\Remote\HeaderChannel.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\MessageSelectorFactory.cs" />
-    <Compile Include="Remote\Remote\RemoteNodeConnectionPool.cs" />
+    <Compile Include="Remote\Remote\RemoteError.cs" />
+    <Compile Include="Remote\Remote\RemoteNodeCollection.cs" />
     <Compile Include="Remote\Remote\MessageMethod.cs" />
-    <Compile Include="Remote\Remote\ReliableMulticastRemoteActorRegistry.cs" />
+    <Compile Include="Remote\Remote\RegistryNode.cs" />
     <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastListener.cs" />
     <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastSocket.cs" />
     <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastSocketOptions.cs" />
     <Compile Include="Remote\Remote\ReliableMulticast\ReliableMulticastWriter.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\RequestSelectorFactory.cs" />
     <Compile Include="MessageHeaders\MessageHeaders\ResponseSelectorFactory.cs" />
-    <Compile Include="Remote\Remote\RemoteActorRegistry.cs" />
-    <Compile Include="Remote\Remote\RemoteChannel.cs" />
-    <Compile Include="Remote\Remote\RemoteChannelConnectionPool.cs" />
-    <Compile Include="Remote\Remote\RemoteNode.cs" />
+    <Compile Include="Remote\Remote\RemoteActor.cs" />
+    <Compile Include="Remote\Remote\NodeCollection.cs" />
     <Compile Include="Remote\Remote\SocketExtensions.cs" />
     <Compile Include="Remote\Remote\SocketWriter.cs" />
     <Compile Include="Remote\Remote\DelegateChunkWriter.cs" />
